fixes #28: Incident View screen has unreadable background color

--- a/src/main/resources/static/scss/style.scss
+++ b/src/main/resources/static/scss/style.scss
@@ -540,7 +540,14 @@ form {
 
 .m-b-10 {
   margin-bottom: 10px;
-  display: inline-block;
+}
+
+.m-b-20 {
+  margin-bottom: 20px;
+}
+
+.block {
+  display: block;
 }
 
 main {
